# deezspot

./: .gitignore  README.md  easy_spoty.py  pyproject.toml  setup.py  spotites.py
.github/workflows/: python-publish.yml
deezloader/: __download__.py  __taggers__.py  deegw_api.py  easy_spoty.py
deezloader/deezloader/: __download__.py  __download_utils__.py  __init__.py  __utils__.py  dee_api.py  deegw_api.py
deezloader/examples/: credentials.json  deezer.py  spotify.py
deezloader/libutils/: utils.py
deezloader/models/: __init__.py
deezloader/spotloader/: __download__.py  __init__.py  __spo_api__.py  podcastspo.py
deezspot/: __taggers__.py  easy_spoty.py  tes.py
deezspot/deezloader/: __download__.py  __download_utils__.py  __init__.py  __utils__.py  dee_api.py  deegw_api.py
deezspot/libutils/: others_settings.py  utils.py
deezspot/models/: __init__.py  album.py  episode.py  playlist.py  smart.py
deezspot/spotloader/: __download__.py  __init__.py  __spo_api__.py  spotify_settings.py
libutils/: utils.py
models/: album.py  playlist.py  smart.py
spotloader/: __init__.py
