[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deezloadclone"
version = "2024.05.05"
description = "Downloads songs, albums or playlists from deezer and spotify (cloned from https://github.com/An0nimia/deezloader)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "farihdzaky", email = "farihdzakyy@gmail.com" }
]
dependencies = [
    "mutagen>=1.45.0",
    "pycryptodome>=3.10.0", 
    "requests>=2.25.0",
    "spotipy>=2.19.0",
    "tqdm>=4.62.0",
    "fastapi>=0.70.0",
    "uvicorn[standard]>=0.15.0",
    "librespot>=0.0.9"
]
requires-python = ">=3.10"

[project.scripts]
deez-dw = "deezloader.bin.deez_dw:main"
deez-web = "deezloader.bin.deez_web:main"

[project.urls]
Homepage = "https://github.com/farihdzkyy/deezloadclone"
